sass/_pagination.scss
@import "_colors.scss";

.pagination {
	align-items: bottom;
	display: flex;
	justify-content: space-evenly;
}

.pagination-list {
	align-items: center;
	display: flex;
	justify-content: center;
	text-align: center;
	margin: 0;
}

.pagination-ellipsis,
.pagination-link,
.pagination-next,
.pagination-previous {
	font-size: 18px;
	font-weight: bold;
	font-family: Oswald;
	padding-bottom: 20px;
}

.pagination-previous {
	padding-left: 40px;
}

.pagination-next {
	padding-right: 40px;
}

.pagination-ellipsis,
.pagination-link {
	justify-content: space-between;
	padding-left: .5em;
	padding-right: .5em;
	text-align: center
}

// Do not inset like an ordinary unordered list
ul.pagination-list {
	padding-left: 0;
}

.pagination-link.is-current {
	color: $hovered-link-color;
}

.pagination-ellipsis {
	pointer-events: none
}

.pagination-list {
	flex-wrap: wrap;
	list-style: none;
}

// This keeps the layout consistent; simply toggling the element does not
.pagination-link[disabled],
.pagination-next[disabled],
.pagination-previous[disabled] {
	opacity: 0;
	cursor: default;
	pointer-events: none;
	// FIXME: intended to disable keyboard cycling;
	// does not appear to work in Chrome.
	nav-index: -1;
}

